@@ -5,16 +5,16 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.3</version>
+		<version>3.5.6</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.termascacheuta</groupId>
 	<artifactId>core.unificado</artifactId>
-	<version>0.4.0</version>
+	<version>0.5.0</version>
 	<name>unificado.core-service</name>
 	<description>Unificado</description>
 	<properties>
-		<java.version>24</java.version>
+		<java.version>25</java.version>
 		<sonar.organization>eterea-services</sonar.organization>
 		<sonar.projectKey>ETEREA-services_UNIFICADO.core-service</sonar.projectKey>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
@@ -49,13 +49,13 @@
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
-			<version>9.3.0</version>
+			<version>9.4.0</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-			<version>2.8.9</version>
+			<version>2.8.10</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -155,52 +155,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
-	<profiles>
-		<profile>
-			<id>native</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.springframework.boot</groupId>
-						<artifactId>spring-boot-maven-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>process-aot</id>
-								<goals>
-									<goal>process-aot</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.graalvm.buildtools</groupId>
-						<artifactId>native-maven-plugin</artifactId>
-						<extensions>true</extensions>
-						<executions>
-							<execution>
-								<id>build-native</id>
-								<goals>
-									<goal>compile-no-fork</goal>
-								</goals>
-								<phase>package</phase>
-							</execution>
-						</executions>
-						<configuration>
-							<agent>
-								<enabled>true</enabled>
-							</agent>
-							<imageName>unificado.core-service</imageName>
-							<buildArgs>
-								<buildArg>--enable-native-access=ALL-UNNAMED</buildArg>
-								<buildArg>-H:DefaultCharset=UTF-8</buildArg>
-								<buildArg>-H:+AddAllCharsets</buildArg>
-							</buildArgs>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
 
 </project>
